[build-system]
requires = ["setuptools >= 58.0.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-asana"
version = "1.4.9"
authors = [
  { name="Steve Bywater", email="steve@regionalhelpwanted.com" },
]
description = "A project for representing Asana objects as Django models, and for sychronizing data from Asana to Django."
readme = "README.rst"
license_file = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Communications",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
"Homepage" = "https://github.com/sbywater/django-asana"
"Bug Tracker" = "https://github.com/sbywater/django-asana/issues"

