[build-system]
requires = ["setuptools >= 58.0.4", "wheel", "python>=3.7"]
build-backend = "setuptools.build_meta"

[project]
name = "django-asana"
dynamic = ["version",]
authors = [
  { name="Steve Bywater"},
]
description = "A project for representing Asana objects as Django models, and for sychronizing data from Asana to Django."
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">= 3.7"
dependencies = [
    "django >= 3.2",
    "asana == 3.2.2",
    "django-braces >= 1.14",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Communications",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/sbywater/django-asana"
Issues = "https://github.com/sbywater/django-asana/issues"
Changelog = "https://github.com/sbywater/django-asana/blob/master/CHANGELOG.rst"


[tool.setuptools.dynamic]
version = {attr = "djasana.VERSION"}

[tool.black]
line-length = 88
