[metadata]
name = django-asana
version = 1.4.9
long_description = file: README.rst
long_description_content_type = text/x-rst
download_url = https://github.com/sbywater/django-asana
url = https://github.com/sbywater/django-asana
project_urls =
    Docs: RTD = https://django-asana.readthedocs.io/
    CI: GitHub = https://github.com/sbywater/django-asana/actions
    GitHub: issues = https://github.com/sbywater/django-asana/issues
    GitHub: repo = https://github.com/sbywater/django-asana
platforms = any
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Operating System :: OS Independent
    Programming Language :: Python
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Communications
    Topic :: Office/Business :: Scheduling
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
install_requires =
    django>=3.2
    asana>=1.0.0
    django-braces>=1.14
tests_require =
    coverage==6.4.2
    python-coveralls==2.9.3

[coverage:run]
include=djasana/*
omit=*/tests/*,*/migrations/*

[coverage:report]
include=djasana/*
omit=*/tests/*,*/migrations/*

[pycodestyle]
ignore = W503
max-line-length = 88
exclude = */migrations/*,*/src/*
